--- a/.github/workflows/chess.yml
+++ b/.github/workflows/chess.yml
@@ -24,10 +24,19 @@ jobs:
       - name: Run update script
         run: python chess_update.py
 
-      - name: Commit & Push changes
+      - name: Set up Git user
         run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git add board.png game_state.txt README.md
-          git commit -m "♟️ Daily Chess Move"
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+      - name: Set remote URL with token
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
+      - name: Commit and push changes
+        run: |
+          git add board.png game_state.txt
+          git commit -m "♟️ Daily Chess Move" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
